# AgriGEE.lite

./: .gitignore  .pre-commit-config.yaml  404.html  AGENTS.md  Dockerfile  Makefile  PLAN_GEOPOLARS.md  README.md  index.html  mkdocs.yml  objects.inv  pixi.toml  pyproject.toml  sitemap.xml  tox.ini
.claude/: settings.json
.devcontainer/: devcontainer.json  postCreateCommand.sh
.github/actions/setup-python-env/: action.yml
.github/workflows/: main.yml  on-release-main.yml
agrigee_lite/: __init__.py  _geo_compat.py  aria2.conf  check_service_account.py  config.py  downloader.py  ee_utils.py  misc.py  task_manager.py  tgui_task_manager.py  vegetation_indices.py
agrigee_lite/api/: __init__.py  _app.py  _jobs.py  _models.py  _satellites.py
agrigee_lite/api/routes/: __init__.py  images.py  jobs.py  sits.py
agrigee_lite/cache/: __init__.py  backend.py  spatialite_cache.py
agrigee_lite/downloaders/: image.py  sits.py
agrigee_lite/get/: __init__.py  image.py  sits.py
agrigee_lite/sat/: __init__.py  abstract_satellite.py  dem.py  embeddings.py  hls.py  landsat.py  mapbiomas.py  modis.py  naip.py  palsar.py  sentinel.py  sentinel1.py  sentinel2.py  soil.py  unified_satellite.py
agrigee_lite/satellites/: abstract_satellite.py  sentinel.py
agrigee_lite/vis/: images.py  sits.py
data/: sample.parquet
docs/: index.md  modules.md
examples/: download_multiple_sits_landsats_sentinel.ipynb  download_s2_rgb_images.ipynb
modules/: index.html
search/: search_index.json
tests/: conftest.py  download_test_files.py  test_cache_geopolars.py  test_ee_utils_geopolars.py  test_geo_compat.py  test_misc_geopolars.py  test_sits_geopolars.py  utils.py
tests/api/: conftest.py  test_sits.py
tests/get/: test_image.py  test_images_features.py  test_images_quality.py  test_sits.py  test_sits_features.py  test_sits_quality.py
