[project]
name = "agrigee_lite"
version = "2.0.16"
description = "Because using satellite data should not be rocket science."
authors = [{ name = "Mateus Pinto da Silva", email = "mateus.p.silva@ufv.br" }]
readme = "README.md"
keywords = ['python']
requires-python = ">=3.10,<4.0"
dependencies = [
    "earthengine-api>=1.5.7",
    "ee-s1-ard>=1.0.5",
    "geopandas>=1.0.1",
    "pandas>=3.0.0",
    "tqdm>=4.67.1",
    "pandera>=0.26.1",
    "topojson>=1.9",
    "aria2p>=0.12.1",
    "pyarrow>=19.0.1",
    "sqlalchemy>=2.0.0",
]
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.optional-dependencies]
visualization = ["matplotlib>=3.10.1", "plotly>=6.2.0"]
tasks = ["smart_open[gcs]>=7.1.0"]
api = ["fastapi[standard]>=0.115.0", "uvicorn[standard]>=0.34.0"]
postgis = ["psycopg2-binary>=2.9.0"]
all = [
    "matplotlib>=3.10.1",
    "plotly>=6.2.0",
    "smart_open[gcs]>=7.1.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "psycopg2-binary>=2.9.0",
]

[project.scripts]
agl_api = "agrigee_lite.api:main"
test_service_account = "agrigee_lite.check_service_account:main"

[project.urls]
Homepage = "https://mateuspinto.github.io/agrigee_lite/"
Repository = "https://github.com/mateuspinto/agrigee_lite"
Documentation = "https://mateuspinto.github.io/agrigee_lite/"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pixi.workspace]
name = "agrigee_lite"
channels = ["conda-forge"]
platforms = ["linux-64", "osx-arm64", "osx-64"]

[tool.pixi.pypi-dependencies]
agrigee_lite = { path = ".", editable = true }
pyarrow = ">=19.0.1"

[tool.pixi.feature.dev.pypi-dependencies]
pytest = ">=8.3.5"
pre-commit = ">=4.2.0"
deptry = ">=0.23.0"
pyright = ">=1.1.407"
pytest-cov = ">=6.0.0"
ruff = ">=0.11.2"
mkdocs = ">=1.6.1"
mkdocs-material = ">=9.6.9"
mkdocstrings = { version = ">=0.29.0", extras = ["python"] }
ipykernel = ">=6.29.5"
pandas-stubs = ">=3.0.0"
types-shapely = ">=2.0.0.20250202"
types-tqdm = ">=4.67.0.20250319"
build = ">=1.2.0"
twine = ">=6.0.0"

[tool.pixi.feature.visualization.pypi-dependencies]
matplotlib = ">=3.10.1"
plotly = ">=6.2.0"

[tool.pixi.feature.tasks-extra.pypi-dependencies]
smart-open = { version = ">=7.1.0", extras = ["gcs"] }

[tool.pixi.feature.api.pypi-dependencies]
fastapi = { version = ">=0.115.0", extras = ["standard"] }
uvicorn = { version = ">=0.34.0", extras = ["standard"] }

[tool.pixi.feature.postgis.pypi-dependencies]
psycopg2-binary = ">=2.9.0"

[tool.pixi.feature.py311.dependencies]
python = "3.11.*"

[tool.pixi.feature.py312.dependencies]
python = "3.12.*"

[tool.pixi.feature.py313.dependencies]
python = "3.13.*"

[tool.pixi.environments]
default = { features = ["dev"], solve-group = "default" }
visualization = { features = ["visualization"], solve-group = "default" }
tasks-extra = { features = ["tasks-extra"], solve-group = "tasks-extra" }
api = { features = ["api"], solve-group = "default" }
all-features = { features = ["visualization", "api", "postgis", "dev"], solve-group = "default" }
py311 = { features = ["dev", "py311"], solve-group = "py311" }
py312 = { features = ["dev", "py312"], solve-group = "py312" }
py313 = { features = ["dev", "py313"], solve-group = "py313" }

[tool.pixi.tasks]
pre-commit-install = "pre-commit install"
check = { cmd = "pre-commit run -a && pyright && deptry ." }
test = "python -m pytest --cov --cov-config=pyproject.toml --cov-report=xml"
download-test-files = "python tests/download_test_files.py"
docs = "mkdocs serve"
docs-test = "mkdocs build -s"
docs-publish = "mkdocs gh-deploy"
build = "python -m build"
publish = "twine upload --repository-url https://upload.pypi.org/legacy/ dist/*"

[tool.pixi.dependencies]
sqlalchemy = ">=2.0.47,<3"

[tool.pixi.feature.dev.dependencies]
pandas = ">=3.0.0"

[tool.setuptools]
py-modules = ["agrigee_lite"]

[tool.ruff]
target-version = "py311"
line-length = 120
fix = true

[tool.ruff.lint]
select = [
    # flake8-2020
    "YTT",
    # flake8-bandit
    "S",
    # flake8-bugbear
    "B",
    # flake8-builtins
    "A",
    # flake8-comprehensions
    "C4",
    # flake8-debugger
    "T10",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # mccabe
    "C90",
    # pycodestyle
    "E",
    "W",
    # pyflakes
    "F",
    # pygrep-hooks
    "PGH",
    # pyupgrade
    "UP",
    # ruff
    "RUF",
    # tryceratops
    "TRY",
]
ignore = [
    # LineTooLong
    "E501",
    # DoNotAssignLambda
    "E731",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.ruff.format]
preview = true

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.report]
skip_empty = true

[tool.coverage.run]
branch = true
source = ["agrigee_lite"]

[tool.hatch.build]
include = ["agrigee_lite/**", "README.md", "LICENSE"]
exclude = [
    "agrigee_lite/**/*.pyc",
    "agrigee_lite/**/*.pyo",
    "agrigee_lite/**/__pycache__/**",
    "docs/*",
    "mkdocs.yml",
]

[tool.hatch.build.targets.wheel]
packages = ["agrigee_lite"]

[tool.pyright]
venvPath = ".pixi/envs"
venv = "default"
pythonVersion = "3.11"
typeCheckingMode = "standard"

# Paths
include = ["agrigee_lite"]
exclude = ["**/__pycache__", "**/*.pyc", ".pixi", "dist", "build", "agrigee_lite/api"]

# Strictness overrides — tightened from "standard" defaults
reportMissingImports = true
reportMissingTypeStubs = false       # third-party stubs not always available
reportPrivateImportUsage = false     # GEE SDK uses private internals
reportUnknownVariableType = false    # EE objects are dynamically typed
reportUnknownMemberType = false      # EE objects are dynamically typed
reportUnknownArgumentType = false    # EE calls accept Any
reportUnknownParameterType = false
reportMissingParameterType = false
reportReturnType = true
reportIndexIssue = true
reportAttributeAccessIssue = true
reportOperatorIssue = true
reportCallIssue = true
reportArgumentType = true
reportAssignmentType = true
reportGeneralTypeIssues = true

# Deprecation / completeness checks
reportUnnecessaryTypeIgnoreComment = true
reportDeprecated = true
