[project]
name = "agrigee_lite"
version = "3.0.0"
description = "Because using satellite data should not be rocket science."
authors = [{ name = "Mateus Pinto da Silva", email = "mateus.p.silva@ufv.br" }]
readme = "README.md"
keywords = ['python']
requires-python = ">=3.10,<4.0"
dependencies = [
    "earthengine-api>=1.5.7",
    "ee-s1-ard>=1.0.5",
    "geopandas>=1.0.1",
    "pandas>=3.0.0",
    "tqdm>=4.67.1",
    "pandera>=0.26.1",
    "topojson>=1.9",
    "aiohttp>=3.13.5",
    "tenacity>=9.1.4",
    "uvloop>=0.22.1",
    "pyarrow>=19.0.1",
    "polars>=1.0.0",
    "duckdb>=1.0.0",
    "sqlalchemy>=2.0.0",
]
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.optional-dependencies]
visualization = ["matplotlib>=3.10.1", "plotly>=6.2.0"]
tasks = ["smart_open[gcs]>=7.1.0"]
api = ["fastapi[standard]>=0.115.0", "uvicorn[standard]>=0.34.0"]
postgis = ["psycopg2-binary>=2.9.0"]
all = [
    "matplotlib>=3.10.1",
    "plotly>=6.2.0",
    "smart_open[gcs]>=7.1.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "psycopg2-binary>=2.9.0",
]

[project.scripts]
agl_api = "agrigee_lite.api:main"
test_service_account = "agrigee_lite.check_service_account:main"

[project.urls]
Homepage = "https://mateuspinto.github.io/agrigee_lite/"
Repository = "https://github.com/mateuspinto/agrigee_lite"
Documentation = "https://mateuspinto.github.io/agrigee_lite/"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.setuptools]
py-modules = ["agrigee_lite"]

[tool.ruff]
target-version = "py311"
line-length = 120
fix = true

[tool.ruff.lint]
select = [
    # flake8-2020
    "YTT",
    # flake8-bandit
    "S",
    # flake8-bugbear
    "B",
    # flake8-builtins
    "A",
    # flake8-comprehensions
    "C4",
    # flake8-debugger
    "T10",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # mccabe
    "C90",
    # pycodestyle
    "E",
    "W",
    # pyflakes
    "F",
    # pygrep-hooks
    "PGH",
    # pyupgrade
    "UP",
    # ruff
    "RUF",
    # tryceratops
    "TRY",
]
ignore = [
    # LineTooLong
    "E501",
    # DoNotAssignLambda
    "E731",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.ruff.format]
preview = true

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.report]
skip_empty = true

[tool.coverage.run]
branch = true
source = ["agrigee_lite"]

[tool.hatch.build]
include = ["agrigee_lite/**", "README.md", "LICENSE"]
exclude = [
    "agrigee_lite/**/*.pyc",
    "agrigee_lite/**/*.pyo",
    "agrigee_lite/**/__pycache__/**",
    "docs/*",
    "mkdocs.yml",
]

[tool.hatch.build.targets.wheel]
packages = ["agrigee_lite"]

[tool.pyright]
venvPath = ".pixi/envs"
venv = "default"
pythonVersion = "3.14"
typeCheckingMode = "standard"

# Paths
include = ["agrigee_lite"]
exclude = ["**/__pycache__", "**/*.pyc", ".pixi", "dist", "build", "agrigee_lite/api"]

# Strictness overrides — tightened from "standard" defaults
reportMissingImports = true
reportMissingTypeStubs = false       # third-party stubs not always available
reportPrivateImportUsage = false     # GEE SDK uses private internals
reportUnknownVariableType = false    # EE objects are dynamically typed
reportUnknownMemberType = false      # EE objects are dynamically typed
reportUnknownArgumentType = false    # EE calls accept Any
reportUnknownParameterType = false
reportMissingParameterType = false
reportReturnType = true
reportIndexIssue = true
reportAttributeAccessIssue = true
reportOperatorIssue = true
reportCallIssue = true
reportArgumentType = true
reportAssignmentType = true
reportGeneralTypeIssues = true

# Deprecation / completeness checks
reportUnnecessaryTypeIgnoreComment = true
reportDeprecated = true
